--- a/standalone/configuration/logging.properties
+++ b/standalone/configuration/logging.properties
@@ -1,70 +1,54 @@
-#
-# JBoss, Home of Professional Open Source.
-# Copyright 2013, Red Hat, Inc., and individual contributors
-# as indicated by the @author tags. See the copyright.txt file in the
-# distribution for a full listing of individual contributors.
-#
-# This is free software; you can redistribute it and/or modify it
-# under the terms of the GNU Lesser General Public License as
-# published by the Free Software Foundation; either version 2.1 of
-# the License, or (at your option) any later version.
-#
-# This software is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
-# Lesser General Public License for more details.
-#
-# You should have received a copy of the GNU Lesser General Public
-# License along with this software; if not, write to the Free
-# Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
-# 02110-1301 USA, or see the FSF site: http://www.fsf.org.
-#
+# Note this file has been generated and will be overwritten if a
+# logging subsystem has been defined in the XML configuration.
+
 
 # Additional loggers to configure (the root logger is always configured)
-loggers=com.arjuna,jacorb,org.jboss.as.config,org.apache.tomcat.util.modeler,sun.rmi,jacorb.config
+loggers=jacorb,com.arjuna,org.apache.tomcat.util.modeler,org.jboss.as.config,jacorb.config,sun.rmi
 
 logger.level=INFO
 logger.handlers=CONSOLE,FILE
 
-logger.com.arjuna.level=WARN
-logger.com.arjuna.useParentHandlers=true
-
 logger.jacorb.level=WARN
 logger.jacorb.useParentHandlers=true
 
-logger.org.jboss.as.config.level=DEBUG
-logger.org.jboss.as.config.useParentHandlers=true
+logger.com.arjuna.level=WARN
+logger.com.arjuna.useParentHandlers=true
 
 logger.org.apache.tomcat.util.modeler.level=WARN
 logger.org.apache.tomcat.util.modeler.useParentHandlers=true
 
-logger.sun.rmi.level=WARN
-logger.sun.rmi.useParentHandlers=true
+logger.org.jboss.as.config.level=DEBUG
+logger.org.jboss.as.config.useParentHandlers=true
 
 logger.jacorb.config.level=ERROR
 logger.jacorb.config.useParentHandlers=true
 
+logger.sun.rmi.level=WARN
+logger.sun.rmi.useParentHandlers=true
+
 handler.CONSOLE=org.jboss.logmanager.handlers.ConsoleHandler
 handler.CONSOLE.level=INFO
 handler.CONSOLE.formatter=COLOR-PATTERN
-handler.CONSOLE.properties=autoFlush,target
+handler.CONSOLE.properties=autoFlush,target,enabled
 handler.CONSOLE.autoFlush=true
 handler.CONSOLE.target=SYSTEM_OUT
+handler.CONSOLE.enabled=true
 
 handler.FILE=org.jboss.logmanager.handlers.PeriodicRotatingFileHandler
 handler.FILE.level=ALL
 handler.FILE.formatter=PATTERN
-handler.FILE.properties=autoFlush,append,fileName,suffix
+handler.FILE.properties=append,autoFlush,enabled,suffix,fileName
 handler.FILE.constructorProperties=fileName,append
-handler.FILE.autoFlush=true
 handler.FILE.append=true
-handler.FILE.fileName=${org.jboss.boot.log.file:boot.log}
+handler.FILE.autoFlush=true
+handler.FILE.enabled=true
 handler.FILE.suffix=.yyyy-MM-dd
-
-formatter.COLOR-PATTERN=org.jboss.logmanager.formatters.PatternFormatter
-formatter.COLOR-PATTERN.properties=pattern
-formatter.COLOR-PATTERN.pattern=%K{level}%d{HH\:mm\:ss,SSS} %-5p [%c] (%t) %s%E%n
+handler.FILE.fileName=/home/mw/artikel/wildfly810/standalone/log/server.log
 
 formatter.PATTERN=org.jboss.logmanager.formatters.PatternFormatter
 formatter.PATTERN.properties=pattern
 formatter.PATTERN.pattern=%d{yyyy-MM-dd HH\:mm\:ss,SSS} %-5p [%c] (%t) %s%E%n
+
+formatter.COLOR-PATTERN=org.jboss.logmanager.formatters.PatternFormatter
+formatter.COLOR-PATTERN.properties=pattern
+formatter.COLOR-PATTERN.pattern=%K{level}%d{HH\:mm\:ss,SSS} %-5p [%c] (%t) %s%E%n
