--- a/standalone/configuration/logging.properties
+++ b/standalone/configuration/logging.properties
@@ -3,7 +3,7 @@
 
 
 # Additional loggers to configure (the root logger is always configured)
-loggers=jacorb,com.arjuna,org.apache.tomcat.util.modeler,org.jboss.as.config,jacorb.config,sun.rmi
+loggers=jacorb,com.arjuna,org.jboss.as.config,org.apache.tomcat.util.modeler,jacorb.config,sun.rmi
 
 logger.level=INFO
 logger.handlers=CONSOLE,FILE
@@ -14,11 +14,11 @@ logger.jacorb.useParentHandlers=true
 logger.com.arjuna.level=WARN
 logger.com.arjuna.useParentHandlers=true
 
-logger.org.apache.tomcat.util.modeler.level=WARN
-logger.org.apache.tomcat.util.modeler.useParentHandlers=true
-
 logger.org.jboss.as.config.level=DEBUG
 logger.org.jboss.as.config.useParentHandlers=true
+
+logger.org.apache.tomcat.util.modeler.level=WARN
+logger.org.apache.tomcat.util.modeler.useParentHandlers=true
 
 logger.jacorb.config.level=ERROR
 logger.jacorb.config.useParentHandlers=true
@@ -29,16 +29,15 @@ logger.sun.rmi.useParentHandlers=true
 handler.CONSOLE=org.jboss.logmanager.handlers.ConsoleHandler
 handler.CONSOLE.level=INFO
 handler.CONSOLE.formatter=COLOR-PATTERN
-handler.CONSOLE.properties=autoFlush,target,enabled
+handler.CONSOLE.properties=enabled,autoFlush,target
+handler.CONSOLE.enabled=true
 handler.CONSOLE.autoFlush=true
 handler.CONSOLE.target=SYSTEM_OUT
-handler.CONSOLE.enabled=true
 
 handler.FILE=org.jboss.logmanager.handlers.PeriodicRotatingFileHandler
 handler.FILE.level=ALL
 handler.FILE.formatter=PATTERN
 handler.FILE.properties=append,autoFlush,enabled,suffix,fileName
-handler.FILE.constructorProperties=fileName,append
 handler.FILE.append=true
 handler.FILE.autoFlush=true
 handler.FILE.enabled=true
