add ssl support

--- a/system.properties.sample
+++ b/system.properties.sample
@@ -3,5 +3,8 @@ exampleds.user: sa
 exampleds.password: sa
 
 txn.node.identifier: node-test1
-jboss.bind.address: 192.168.178.32
+jboss.bind.address: localhost
+
+ssl.keystore.password: keystore_password
+
 
