changed bind.address to localhost

--- a/system.properties.sample
+++ b/system.properties.sample
@@ -3,5 +3,5 @@ exampleds.user: sa
 exampleds.password: sa
 
 txn.node.identifier: node-test1
-jboss.bind.address: 192.168.178.32
+jboss.bind.address: localhost
 
